# parallel-qsim-berlin

./: .gitignore  CITATION.cff  Makefile  README.md  notes.md  pom.xml
input/v6.4/: berlin-v6.4.0.1pct.config.yml  berlin-v6.4.10pct.config.yml  berlin-v6.4.1pct.config.yml  berlin-v6.4.1pct_600hor.config.yml  berlin-v6.4.config.yml
input/v6.4/misc/: test-pop.xml
scripts/: aggregate_runs.sh  data_preprocessing.sh  mock-routing.sh  run-routing.sh  submit_experiments.py  submit_mock.py
src/main/R/: dry-analysis.R  qsim-2.R  qsim.R  qsim_routing_instrument.R  router.R  router_instrument.R  utils.R
src/main/java/org/matsim/: GitInfo.java  IdStoreDeserializer.java  JVMFlagsReader.java
src/main/java/org/matsim/analysis/: ActivityAnalysis.java  ExperiencedPlansWriter.java  MockRoutingClient.java  ProfileRouting.java  PtRequestsAnalysis.java  RequestConverter.java
src/main/java/org/matsim/prepare/: PrepareNetwork.java  (+5 more)
src/main/proto/: routing.proto
src/main/python/: activity_analysis.ipynb  convert_csv_parquet.py  environment.yml  explorative_analysis.ipynb  load.py  load2.py  load_utils.py  mock_routing.ipynb  preprocessing.py  readme.md  router.ipynb  routing-request-analysis.ipynb
src/main/python/jupyter-notebooks/: explorative_analysis.ipynb  java-vs-rust-no-pt.ipynb  routing-request-analysis.ipynb  test.ipynb
src/main/python/scripts/: aggregate_runs.py  convert_csv_parquet.py  load_utils.py  mock_routing_utils.py  preprocessing.py
src/main/rust/: Cargo.toml
src/test/java/org/matsim/: IdStoreDeserializerTest.java
src/test/resources/org/matsim/: ids.pbf
(+11 files in other folders)
