[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
#rust_qsim = { path = "../../../../parallel_qsim_rust/rust_qsim" }
rust_qsim = { git = "https://github.com/matsim-vsp/parallel_qsim_rust" }
csv = "1.4.0"
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.44"
